--- a/model-viewer.html
+++ b/model-viewer.html
@@ -12,6 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
 </head>
     <div id="viewer-container"></div>
+    <div class="ifc-property-menu">
+        <div class="ifc-property-item">
+            <div>Key</div>
+            <div class="ifc-property-value">Value</div>
+        </div>
+        <div id="ifc-property-menu-root"></div>
+    </div>
     <script src="bundle.js"></script>
 </body>
 </html>
